crates/spelldawn/tests/it/core/snapshots/it__rules__create_game_tests__create_new_game.snap
---
source: crates/spelldawn/tests/it/rules/create_game_tests.rs
assertion_line: 39
expression: "Summary::run(&response)"

---

command_list: 
    ConnectToGame: 
        scene_name: "Labyrinth"
channel_response: 
    ConnectToGame: 
        scene_name: "Labyrinth"
